static/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

body {
    height: 100vh;
    padding: 3%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.libraryLogo {
    display: flex;
    align-items: center;
    gap: 15px;
}
.libraryLogo img{
    width: 40px;
    height: 40px;
}


main {
    margin-top: 2%;
    padding: 20px;
    flex: 1;
    align-self: center;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
}


main table {
    border-collapse: collapse;
    width: 100%;
    border: 2px solid rgba(200, 200, 200);
    letter-spacing: 1px;
    font-size: 0.95rem;
}

table img {
    width: 25px;
    height: 25px;
    cursor: pointer;
    transition: ease-in-out .3s;
}

table img:hover {
    filter: brightness(1.2);
    transform: scale(1.10);
}

th , td  {
    border: 1px solid rgba(190, 190, 190);
    padding: 10px 20px;
}

th {
    background-color: rgb(235, 235, 235);
}

td {
    text-align: center;
}

tr:nth-child(even) td {
    background-color: rgb(250, 250, 250);
}

tr:nth-child(odd) td {
    background-color: rgb(245, 245, 245);
}


button {
    display: flex;
    align-items: center;
    padding: 20px 30px;
    font-size: 0.9rem;
    font-weight: bold;
    gap: 10px;
    color: rgba(0, 0, 0, 0.8);
    border: none;
    outline: none;
    background-color: white;
    border-radius: 10px;
    transition: ease-in .4s;
    cursor: pointer;
}

button img {
    width: 20px;
    height: 20px;
}

button:hover {
    background-color: rgba(230, 230, 230);
}

footer {
    font-size: 0.8rem;
    align-self: center;
    display: flex;
    align-items: center;
    gap: 6px;
}

footer img {
    width: 15px;
    height: 15px;
    transition: ease-in-out .4s;
}

footer img:hover {
    transform:  scale(1.3) rotate(360deg);
}

